# sp-aurora

./: .gitattributes  .gitignore  CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  check_onednn_usage.py  check_sdpa_detailed.py  comprehensive_results.csv  onednn_check_output.txt  plot_results.py  pyproject.toml  setup.py  simple_test.py  test_comm_fix.py  test_deadlock_fix.py  test_intel_flash_attn_quick.py  test_intel_gpu.py  test_intel_gpu_fixed.py  test_kernel_selection.py  test_mpi_basic.py  test_oneccl.py  test_sycl_performance.py  test_sycl_simple.py
archived_fallbacks/: all_to_all_fallback.py  intel_ulysses_attn_cpu_fallback.py  intel_ulysses_attn_with_fallback.py  test_all_to_all_alternatives.py  test_ccl_alltoall_workarounds.py  test_ulysses_reorganized.py  test_ulysses_with_cpu_fallback.py
docs/: MPI_COMPATIBILITY.md
examples/: example_mpi_integration.py  example_ulysses_attn.py  example_ulysses_class_based.py
ring_flash_attn/: __init__.py  difference_report.md  intel_flash_attn.py  intel_flash_attn_sycl.py  intel_ring_flash_attn.py  intel_ring_flash_attn_fixed.py  intel_ulysses_attn.py  intel_utils.py  intel_utils_fixed.py  intel_utils_fixed.py.bak  mpi_utils.py  nv.md  ring_flash_attn.py
ring_flash_attn/comm/: __init__.py  all_to_all.py
ring_flash_attn/sycl/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  flash_attn_kernel.cpp  flash_attn_kernel.cpp.bak  flash_attn_kernel.h  flash_attn_kernel_optimized.cpp.bak  ring_flash_attn_kernel.cpp  utils.h
ring_flash_attn/sycl_bindings/: bindings.cpp
ring_flash_attn/ulysses/: README.md  attn_layer.py
sp_aurora/: __init__.py  globals.py  intel_flash_attn.py  intel_flash_attn_optimized.py  intel_flash_attn_sycl.py  intel_ring_flash_attn.py  intel_ulysses_attn.py  intel_utils.py  mpi_utils.py  ring_pytorch_attn.py  utils.py  utils_standard.py.bak
sp_aurora/comm/: README.md  __init__.py  all_to_all.py
sp_aurora/hybrid/: __init__.py  long_ctx_attention.py
sp_aurora/kernels/: __init__.py  attention.py
sp_aurora/sycl/: CMakeLists.txt  README.md  __init__.py  cmake_install.cmake  debug_kernel.cpp  flash_attn_kernel.h  flash_attn_kernel_onednn.cpp  flash_attn_kernel_onednn_orig.cpp  flash_attn_kernel_optimized.cpp  flash_attn_kernel_optimized_v2.cpp  flash_attn_kernel_optimized_v3.cpp  flash_attn_kernel_optimized_v3_fixed.cpp  flash_attn_kernel_optimized_v5.cpp  flash_attn_kernel_xmx_simple.cpp  install_manifest.txt  ring_flash_attn_kernel.cpp.bak  utils.cpp
sp_aurora/sycl_bindings/: __init__.py
sp_aurora/ulysses/: README.md  __init__.py  attn_layer.py
test/: check_backends.py  check_ccl_backend.py  check_environment.py  run_ddp_ccl.py  run_ddp_ccl.sh  run_ddp_ccl_fail.py  run_ddp_ccl_fail.sh  run_mpi_test.sh  run_ring_comm_mpi.sh  run_ring_comm_test.sh  run_ring_debug.sh  run_test_with_env.sh  test_ccl_minimal.py  test_ccl_minimal.sh  test_ccl_simple.py  test_flash_attention_simple.py  test_flash_attention_validation.py  test_intel_all.sh  test_intel_aurora.sh  test_intel_aurora_mpi.sh  test_intel_ccl_setup.py  test_intel_fixed.sh  test_intel_gpu_fixed.py  test_intel_ring_flash_attn.py  test_intel_ring_flash_attn.sh  test_lse_computation.py  test_mpi_examples.sh  test_ring.py  test_ring.sh  test_ring_attention_accuracy.py  test_ring_attention_comprehensive.py  test_ring_attention_full_accuracy.py  test_ring_comm_mpi.py  test_ring_comm_simple.py  test_ring_debug.py  test_ring_debug_fixed.py  test_simple_ccl.py  test_simple_distributed.py  test_sycl_flash_attention.py
test/debug/: check_sdpa_backend.py  compare_distributed_setup.py  diagnose_ccl_hang.py  test_ulysses_ccl_debug.py  test_ulysses_minimal_hang.py  test_xpu_alltoall_minimal.py  test_xpu_collectives_debug.py
test/flash_attention/: test_flash_attention_simple.py  test_flash_attention_validation.py  test_intel_ring_flash_attn.py  test_intel_ring_flash_attn_varlen.py  test_lse_computation.py  test_ring.py
test/mpi/: test_mpi_init.py  test_mpi_ring_flash_attn.py
test/performance/: test_bandwidth_analysis.py  test_comprehensive_performance.py  test_kernel_selection.py  test_onednn_performance.py  test_sycl_performance.py  test_v5_performance.py
test/scripts/: build_and_test_ulysses.sh  run_ccl_minimal.sh  run_mpi_test.sh  run_ulysses_ccl_direct.sh  run_ulysses_with_oneccl.sh  run_with_proper_env.sh  run_xpu_alltoall_test.sh  test_intel_aurora.sh  test_intel_ring_flash_attn.sh  test_mpi_ulysses.sh  test_ring.sh  test_ulysses_mpi.sh
test/sycl/: test_sycl_flash_attention.py  test_sycl_simple.py
test/ulysses/: test_intel_alltoall_4d.py  test_intel_ulysses_attn.py  test_ulysses_simple.py
test/verification/: test_ring_init_pattern.py  test_ring_ulysses_final.py  test_ulysses_fixed.py
